# gwincc

./: README.md  main.py  pyproject.toml
src/gwincc/: __init__.py  common.py
