[project]
name = "gwincc"
version = "0.1.0"
description = "Windows control center"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gwincc = "gwincc:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
